--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,12 +2,14 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family      family='JetBrains Mono' style=Medium
-bold_font        family='JetBrains Mono' style=Bold
-font_size 16
+font_family         family='JetBrains Mono' style=SemiBold
+bold_font           family='JetBrains Mono' style=ExtraBold
+italic_font         family='JetBrains Mono' style='SemiBold Italic'
+italic_bold_font    family='JetBrains Mono' style='ExtraBold Italic'
+font_size 17
 adjust_line_height 4
 adjust_column_width -2
-symbol_map U+00B7 CaskaydiaCove Nerd Font ExtraLight Italic
+symbol_map U+00B7 JetBrains Mono
 
 
 # mouse
@@ -83,7 +85,6 @@ map cmd+ctrl+shift+= resize_window wider 0.5
 map cmd+ctrl+shift+- resize_window taller 0.5
 map cmd+m toggle_layout stack
 # scrolling
-map cmd+y show_scrollback
 map cmd+d remote_control scroll-window 0.5p
 map cmd+u remote_control scroll-window 0.5p-
 map cmd+shift+d remote_control scroll-window 0.5p
@@ -91,6 +92,7 @@ map cmd+shift+u remote_control scroll-window 0.5p-
 # search
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+f show_scrollback
+map cmd+y kitten kitty_grab/grab.py
 
 
 # theme
