--- a/kitty/grab.conf
+++ b/kitty/grab.conf
@@ -14,5 +14,5 @@ map w       move word left
 map b       move word right
 map Ctrl+u  move page up
 map Ctrl+d  move page down
-map Ctrl+e  scroll up
-map Ctrl+y  scroll down
+map Ctrl+e  scroll down
+map Ctrl+y  scroll up
