--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@ font_family         family='JetBrains Mono' style=SemiBold
 bold_font           family='JetBrains Mono' style=ExtraBold
 italic_font         family='JetBrains Mono' style='SemiBold Italic'
 italic_bold_font    family='JetBrains Mono' style='ExtraBold Italic'
-font_size 17
-adjust_line_height 4
+font_size 16.5
+adjust_line_height 2
 adjust_column_width -2
-symbol_map U+00B7 JetBrains Mono
+symbol_map U+00B7 CaskaydiaCove Nerd Font Mono Light Italic
 
 
 # mouse
@@ -17,9 +17,14 @@ copy_on_select true
 mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
 
+# cursor trail
+cursor_trail 1
+cursor_trail_decay 0.1 0.15
+cursor_trail_start_threshold 5
+
 
 # performance tuning
-repaint_delay 2
+repaint_delay 0
 input_delay 0
 sync_to_monitor no
 
@@ -54,8 +59,6 @@ map ctrl+shift+minus no_op
 map cmd+q no_op
 map ctrl+tab no_op
 # tab management
-map cmd+i previous_tab
-map cmd+o next_tab
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -65,7 +68,7 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-# map cmd+; select_tab
+map cmd+; select_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -92,7 +95,6 @@ map cmd+shift+u remote_control scroll-window 0.5p-
 # search
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+f show_scrollback
-map cmd+y kitten kitty_grab/grab.py
 
 
 # theme
