--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,8 +28,8 @@ set-window-option -g mode-keys vi
 # Start windows and panes at 1, not 0
 set-option -g base-index 1
 
-# Set C-b as prefix
-set-option -g prefix C-b
+# Set prefix
+set-option -g prefix C-f
 
 # Set default shell
 set-option -g default-shell /bin/bash
@@ -41,14 +41,14 @@ set-option -g remain-on-exit off
 # Status bar:
 
 set-option -g status-position top
-set-option -g status-justify left 
+set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
 set-option -g status-style bg=#FFFFFF
 
-set-option -g window-status-style bg=default,fg=black
-set-option -g window-status-current-style bg=default,fg=green
+set-option -g window-status-style bg=default,fg=black,bold
+set-option -g window-status-current-style bg=default,fg=green,bold
 
 set-option -g pane-active-border-style fg=colour250
 set-option -g pane-border-style fg=colour241
@@ -58,6 +58,9 @@ set-option -g status-right ''
 
 set -g status-left-length 20
 set -g status-left " "
+
+set -g status-interval 3
+set -g status-right "#[fg=yellow]#(top -l 1 | grep \"CPU usage\" | awk '{print \"CPU: \" $3}') "
 
 # --------------------------------------------------------
 # Key bindings:
@@ -72,10 +75,10 @@ unbind-key -a -T root
 bind-key C-r source-file ~/.tmux.conf \; display-message "configuration reloaded"
 
 # Create new windows, new windows start in current directory
-bind-key n new-window -c "#{pane_current_path}"
+bind-key t new-window -c "#{pane_current_path}"
 
 # command prompt
-#bind-key : command-prompt
+bind-key : command-prompt
 
 # Split pane vertically and horizontally, new panes start in current directory
 bind-key = splitw -h -c "#{pane_current_path}"
@@ -83,23 +86,9 @@ bind-key - splitw -v -c "#{pane_current_path}"
 
 # Enter copy mode by c, leave copy mode by q, movements and search in copy mode
 bind-key c copy-mode
-bind-key -T copy-mode-vi q send-keys -X cancel
-bind-key -T copy-mode-vi u send-keys -X halfpage-up
-bind-key -T copy-mode-vi d send-keys -X halfpage-down
-bind-key -T copy-mode-vi k send-keys -X scroll-up
-bind-key -T copy-mode-vi j send-keys -X scroll-down
-bind-key -T copy-mode-vi h send-keys -X cursor-left
-bind-key -T copy-mode-vi l send-keys -X cursor-right
-bind-key -T copy-mode-vi g send-keys -X history-top
-bind-key -T copy-mode-vi G send-keys -X history-bottom
-bind-key -T copy-mode-vi / command-prompt -p "(search up)" "send -X search-backward \"%%%\""
-bind-key -T copy-mode-vi ? command-prompt -p "(search down)" "send -X search-forward \"%%%\""
-bind-key -T copy-mode-vi n send-keys -X search-forward
-bind-key -T copy-mode-vi N send-keys -X search-backward
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi C-v send -X rectangle-toggle
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel
-bind-key -T copy-mode-vi Escape send -X clear-selection
+bind-key -T copy-mode-vi y send -X copy-pipe
 
 # Switch active panes
 bind-key h select-pane -L
@@ -142,5 +131,4 @@ bind-key i previous-window
 bind-key o next-window
 
 # Exit panes
-bind-key x confirm-before kill-pane
-bind-key X kill-pane
+bind-key w kill-pane
