--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -18,7 +18,7 @@ mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
 
 # cursor trail
-cursor_trail 1
+cursor_trail 0
 cursor_trail_decay 0.1 0.15
 cursor_trail_start_threshold 5
 
@@ -45,7 +45,7 @@ tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 100
+tab_bar_min_tabs 1
 
 
 # advanced
@@ -59,6 +59,8 @@ map ctrl+shift+minus no_op
 map cmd+q no_op
 map ctrl+tab no_op
 # tab management
+map cmd+i previous_tab
+map cmd+o next_tab
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -68,7 +70,6 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-map cmd+; select_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -95,6 +96,7 @@ map cmd+shift+u remote_control scroll-window 0.5p-
 # search
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+f show_scrollback
+map cmd+y kitten grab/grab.py
 
 
 # theme
