--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,11 +2,11 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='JetBrains Mono' style=SemiBold
-bold_font           family='JetBrains Mono' style=ExtraBold
-italic_font         family='JetBrains Mono' style='SemiBold Italic'
-italic_bold_font    family='JetBrains Mono' style='ExtraBold Italic'
-font_size 16.5
+font_family         family='JetBrains Mono' style=Medium
+bold_font           family='JetBrains Mono' style=Bold
+italic_font         family='JetBrains Mono' style='Regular Italic'
+italic_bold_font    family='JetBrains Mono' style='Bold Italic'
+font_size 16
 adjust_line_height 2
 adjust_column_width -2
 symbol_map U+00B7 CaskaydiaCove Nerd Font Mono Light Italic
@@ -45,7 +45,7 @@ tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 1
+tab_bar_min_tabs 100
 
 
 # advanced
@@ -94,15 +94,14 @@ map cmd+u remote_control scroll-window 0.5p-
 map cmd+shift+d remote_control scroll-window 0.5p
 map cmd+shift+u remote_control scroll-window 0.5p-
 # search
-map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-map cmd+f show_scrollback
-map cmd+y kitten grab/grab.py
+map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+map cmd+shift+f show_scrollback
 
 
 # theme
 background #ffffff
 foreground #000000
-cursor #000000
+cursor #666666
 cursor_shape block
 cursor_blink_interval 0
 cursor_text_color #ffffff
