--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set-window-option -g mode-keys vi
 set-option -g base-index 1
 
 # Set prefix
-set-option -g prefix C-f
+set-option -g prefix C-b
 
 # Set default shell
 set-option -g default-shell /bin/bash
@@ -89,6 +89,8 @@ bind-key c copy-mode
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi y send -X copy-pipe
+bind-key -T copy-mode-vi u send-keys -X halfpage-up
+bind-key -T copy-mode-vi d send-keys -X halfpage-down
 
 # Switch active panes
 bind-key h select-pane -L
@@ -108,6 +110,7 @@ bind-key Left resize-pane -L 1
 bind-key Right resize-pane -R 1
 bind-key Up resize-pane -U 1
 bind-key Down resize-pane -D 1
+
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
 bind-key K resize-pane -U 5
