--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set-window-option -g mode-keys vi
 set-option -g base-index 1
 
 # Set prefix
-set-option -g prefix C-b
+set-option -g prefix C-f
 
 # Set default shell
 set-option -g default-shell /bin/bash
