--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,14 +2,12 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='JetBrains Mono' style=Medium
-bold_font           family='JetBrains Mono' style=Bold
-italic_font         family='JetBrains Mono' style='Regular Italic'
-italic_bold_font    family='JetBrains Mono' style='Bold Italic'
-font_size 16
-adjust_line_height 2
-adjust_column_width -2
-symbol_map U+00B7 CaskaydiaCove Nerd Font Mono Light Italic
+font_family         family='Maple Mono NF CN' style=Medium
+bold_font           family='Maple Mono NF CN' style=Bold
+font_size 15.5
+adjust_line_height 1
+adjust_column_width -3
+symbol_map U+00B7 Maple Mono NF CN Thin Italic
 
 
 # mouse
@@ -38,25 +36,25 @@ window_border_width 0.5pt
 
 
 # tab bar
-# tab_bar_edge top
+tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 100
+tab_bar_min_tabs 1
 
 
 # advanced
 shell_integration no-cursor
 
+enable_audio_bell no
 
 # keybinding
 # unmap
 map ctrl+shift+equal no_op
 map ctrl+shift+minus no_op
-map cmd+q no_op
 map ctrl+tab no_op
 # tab management
 map cmd+i previous_tab
@@ -77,7 +75,6 @@ map cmd+0 change_font_size all 0
 # window
 map cmd+w close_window
 map cmd+s launch --location=split --cwd=current
-map cmd+shift+s launch --location=hsplit --cwd=current
 map cmd+h neighboring_window left
 map cmd+l neighboring_window right
 map cmd+k neighboring_window up
@@ -85,17 +82,10 @@ map cmd+j neighboring_window down
 map cmd+r layout_action rotate
 map cmd+shift+= resize_window wider 5
 map cmd+shift+- resize_window taller 5
-map cmd+ctrl+shift+= resize_window wider 0.5
-map cmd+ctrl+shift+- resize_window taller 0.5
 map cmd+m toggle_layout stack
-# scrolling
-map cmd+d remote_control scroll-window 0.5p
-map cmd+u remote_control scroll-window 0.5p-
-map cmd+shift+d remote_control scroll-window 0.5p
-map cmd+shift+u remote_control scroll-window 0.5p-
 # search
-map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-map cmd+shift+f show_scrollback
+map cmd+f show_scrollback
+map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 
 
 # theme
