--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,8 +59,8 @@ set-option -g status-right ''
 set -g status-left-length 20
 set -g status-left " "
 
-set -g status-interval 3
-set -g status-right "#[fg=yellow]#(top -l 1 | grep \"CPU usage\" | awk '{print \"CPU: \" $3}') "
+# set -g status-interval 3
+# set -g status-right "#[fg=yellow]#(top -l 1 | grep \"CPU usage\" | awk '{print \"CPU: \" $3}') "
 
 # --------------------------------------------------------
 # Key bindings:
