--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,8 +4,8 @@ clone-in-kitty
 # font
 font_family         family='Maple Mono NF CN' style=Medium
 bold_font           family='Maple Mono NF CN' style=Bold
-font_size 15.5
-adjust_line_height 1
+font_size 15
+adjust_line_height 0
 adjust_column_width -3
 symbol_map U+00B7 Maple Mono NF CN Thin Italic
 
@@ -43,7 +43,7 @@ tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 1
+tab_bar_min_tabs 100
 
 
 # advanced
@@ -57,8 +57,6 @@ map ctrl+shift+equal no_op
 map ctrl+shift+minus no_op
 map ctrl+tab no_op
 # tab management
-map cmd+i previous_tab
-map cmd+o next_tab
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -86,7 +84,9 @@ map cmd+m toggle_layout stack
 # search
 map cmd+f show_scrollback
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-
+# tmux
+map cmd+i send_text all \x06i
+map cmd+o send_text all \x06o
 
 # theme
 background #ffffff
