--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,9 +3,9 @@ clone-in-kitty
 
 # font
 font_family         family='Maple Mono NF CN' style=Medium
-bold_font           family='Maple Mono NF CN' style=Bold
-font_size 15
-adjust_line_height 0
+bold_font           family='Maple Mono NF CN' style=SemiBold
+font_size 15.5
+adjust_line_height 1
 adjust_column_width -3
 symbol_map U+00B7 Maple Mono NF CN Thin Italic
 
@@ -43,7 +43,7 @@ tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 100
+tab_bar_min_tabs 1
 
 
 # advanced
@@ -66,6 +66,8 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
+map cmd+i previous_tab
+map cmd+o next_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -84,9 +86,6 @@ map cmd+m toggle_layout stack
 # search
 map cmd+f show_scrollback
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-# tmux
-map cmd+i send_text all \x06i
-map cmd+o send_text all \x06o
 
 # theme
 background #ffffff
