kitty: change font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,8 +2,8 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='Maple Mono NF CN' style=Medium
-bold_font           family='Maple Mono NF CN' style=SemiBold
+font_family         family='JetBrainsMonoNL Nerd Font Mono' style=Medium
+bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
 font_size 15.5
 adjust_line_height 1
 adjust_column_width -3
@@ -25,11 +25,12 @@ cursor_trail_start_threshold 5
 repaint_delay 0
 input_delay 0
 sync_to_monitor no
+macos_custom_beam_cursor yes
 
 
 # window layout
 hide_window_decorations titlebar-only
-window_padding_width 0
+window_padding 0
 confirm_os_window_close 0
 enabled_layouts splits,stack
 window_border_width 0.5pt
