--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,7 @@ set-option -g default-terminal "tmux-256color"
 set-option -as terminal-features ",*:RGB"
 
 # Timeout to determine meta key sequence
-set-option -s escape-time 0
+set-option -s escape-time 100
 
 # Increase scrollback buffer size
 set-option -g history-limit 100000
@@ -58,9 +58,6 @@ set-option -g status-right ''
 
 set -g status-left-length 20
 set -g status-left " "
-
-# set -g status-interval 3
-# set -g status-right "#[fg=yellow]#(top -l 1 | grep \"CPU usage\" | awk '{print \"CPU: \" $3}') "
 
 # --------------------------------------------------------
 # Key bindings:
@@ -132,6 +129,9 @@ bind-key 8 select-window -t 8
 bind-key 9 select-window -t 9
 bind-key i previous-window
 bind-key o next-window
+
+# Clear history
+bind-key C-k clear-history
 
 # Exit panes
 bind-key w kill-pane
