--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,8 +5,8 @@ clone-in-kitty
 font_family         family='JetBrainsMonoNL Nerd Font Mono' style=Medium
 bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
 italic_font         family='Caskaydiacove Nerd Font Mono' style=Italic
-font_size 15
-adjust_line_height 0
+font_size 14.5
+adjust_line_height 1
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
 
@@ -38,14 +38,14 @@ window_border_width 0.5pt
 
 
 # tab bar
-tab_bar_edge top
+tab_bar_edge bottom
 tab_bar_style separator
 tab_separator ""
-tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
-active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
+tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}:{title.split()[0]}"
+active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}:{title.split()[0]}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 100
+tab_bar_min_tabs 1
 
 
 # advanced
@@ -68,10 +68,8 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-# map cmd+i previous_tab
-# map cmd+o next_tab
-map cmd+i send_text all \x06i
-map cmd+o send_text all \x06o
+map cmd+i previous_tab
+map cmd+o next_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -90,6 +88,7 @@ map cmd+m toggle_layout stack
 # search
 map cmd+f show_scrollback
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+map cmd+y kitten grab/grab.py
 
 # theme
 background #ffffff
