--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,13 +2,14 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='JetBrainsMonoNL Nerd Font Mono' style=Medium
+font_family         family='JetBrainsMonoNL Nerd Font Mono' style=SemiBold
 bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
-italic_font         family='Caskaydiacove Nerd Font Mono' style=Italic
-font_size 14.5
-adjust_line_height 1
+font_size 15
+adjust_line_height 5
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
+cursor_shape block
+cursor_blink_interval 0
 
 
 # mouse
@@ -17,9 +18,9 @@ mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
 
 # cursor trail
-cursor_trail 0
-cursor_trail_decay 0.0 0.2
-cursor_trail_start_threshold 5
+cursor_trail 1
+cursor_trail_decay 0.0 0.05
+cursor_trail_start_threshold 10
 
 
 # performance tuning
@@ -38,7 +39,7 @@ window_border_width 0.5pt
 
 
 # tab bar
-tab_bar_edge bottom
+tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}:{title.split()[0]}"
@@ -83,22 +84,24 @@ map cmd+k neighboring_window up
 map cmd+j neighboring_window down
 map cmd+r layout_action rotate
 map cmd+shift+= resize_window wider 5
-map cmd+shift+- resize_window taller 5
+map cmd+shift+- resize_window narrower 5
+map cmd+ctrl+= resize_window taller 5
+map cmd+ctrl+- resize_window shorter 5
 map cmd+m toggle_layout stack
 # search
 map cmd+f show_scrollback
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-map cmd+y kitten grab/grab.py
+map cmd+; kitten grab/grab.py
 
-# theme
+# light theme
 background #ffffff
 foreground #000000
 cursor #666666
-cursor_shape block
-cursor_blink_interval 0
 cursor_text_color #ffffff
 selection_background #8d9091
 selection_foreground #ffffff
+active_border_color #00ff15
+inactive_border_color #000000
 # black
 color0 #000000
 color8 #545753
@@ -123,9 +126,3 @@ color14 #34e2e2
 # white
 color7 #d3d7cf
 color15 #ededec
-
-active_border_color #00ff15
-inactive_border_color #000000
-
-cursor_shape block
-cursor_blink_interval 0
