--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,8 @@ clone-in-kitty
 # font
 font_family         family='JetBrainsMonoNL Nerd Font Mono' style=SemiBold
 bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
-font_size 15
+italic_font         family='JetBrainsMonoNL Nerd Font Mono' style='Medium Italic'
+font_size 14
 adjust_line_height 5
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
@@ -18,8 +19,8 @@ mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
 
 # cursor trail
-cursor_trail 1
-cursor_trail_decay 0.0 0.05
+cursor_trail 0
+cursor_trail_decay 0.0 0.3
 cursor_trail_start_threshold 10
 
 
@@ -42,15 +43,14 @@ window_border_width 0.5pt
 tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
-tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}:{title.split()[0]}"
-active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}:{title.split()[0]}"
+tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}"
+active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 1
-
+tab_bar_min_tabs 100
 
 # advanced
-shell_integration no-cursor
+shell_integration no-cursor no-title
 
 enable_audio_bell no
 
