--- a/ghostty/config
+++ b/ghostty/config
@@ -10,24 +10,23 @@ shell-integration-features = no-cursor
 unfocused-split-opacity = 1.0
 confirm-close-surface = false
 clipboard-paste-protection = false
-copy-on-select = true
+copy-on-select = clipboard
 quit-after-last-window-closed = true
 window-padding-x = 0,0
 window-padding-y = 0,0
 
 ## keybindings
-keybind = cmd+d=ignore
-keybind = cmd+D=ignore
-keybind = cmd+s=ignore
-keybind = cmd+S=ignore
-keybind = cmd+w=ignore
 keybind = cmd+n=ignore
 keybind = cmd+t=ignore
 
-keybind = cmd+\=new_split:right
+keybind = cmd+d=new_split:right
+keybind = cmd+s=new_split:down
 
-keybind = cmd+f=goto_split:next
-keybind = cmd+g=toggle_split_zoom
+keybind = cmd+h=goto_split:left
+keybind = cmd+l=goto_split:right
+keybind = cmd+j=goto_split:down
+keybind = cmd+k=goto_split:up
+keybind = cmd+m=toggle_split_zoom
 
 keybind = cmd+1=text:\x061
 keybind = cmd+2=text:\x062
@@ -41,61 +40,50 @@ keybind = cmd+9=text:\x069
 keybind = cmd+i=text:\x06i
 keybind = cmd+o=text:\x06o
 keybind = cmd+w=text:\x06w
-keybind = cmd+e=text:\x06e
 keybind = cmd+t=text:\x06t
-keybind = cmd+h=text:\x06h
-keybind = cmd+j=text:\x06j
-keybind = cmd+k=text:\x06k
-keybind = cmd+l=text:\x06l
-keybind = cmd+shift+h=text:\x06H
-keybind = cmd+shift+j=text:\x06J
-keybind = cmd+shift+k=text:\x06K
-keybind = cmd+shift+l=text:\x06L
-keybind = cmd+d=text:\x06=
-keybind = cmd+s=text:\x06-
-keybind = cmd+m=text:\x06m
-keybind = cmd+;=text:\x06c
+keybind = cmd+f=text:\x06c
 
 ## layout
 # font
-font-size = 16
+font-size = 14
 font-family = "JetBrains Mono NL"
 font-style = "SemiBold"
-font-style-bold = "ExtraBold"
+font-style-bold = "Bold"
 font-style-italic = "SemiBold Italic"
-font-style-bold-italic = "ExtraBold Italic"
-font-codepoint-map = U+00B7=CaskaydiaCove Nerd Font Mono
+#font-codepoint-map = U+00B7=CaskaydiaCove Nerd Font Mono
 adjust-cell-width = -3
-adjust-cell-height = 2
+adjust-cell-height = 5
 
-# theme
-# black
-palette = 0=#000000
-palette = 8=#545753
-# red
-palette = 1=#cc0000
-palette = 9=#ef2828
-# green
-palette = 2=#227a00
-palette = 10=#3dcc06
-# yellow
-palette = 3=#e89f00
-palette = 11=#d6d600
-# blue
-palette = 4=#043abd
-palette = 12=#157ae6
-# magenta
-palette = 5=#8f008c
-palette = 13=#5a32a3
-# cyan
-palette = 6=#05989a
-palette = 14=#34e2e2
-# white
-palette = 7=#d3d7cf
-palette = 15=#ededec
+# # theme
+# # black
+# palette = 0=#000000
+# palette = 8=#545753
+# # red
+# palette = 1=#cc0000
+# palette = 9=#ef2828
+# # green
+# palette = 2=#227a00
+# palette = 10=#3dcc06
+# # yellow
+# palette = 3=#e89f00
+# palette = 11=#d6d600
+# # blue
+# palette = 4=#043abd
+# palette = 12=#157ae6
+# # magenta
+# palette = 5=#8f008c
+# palette = 13=#5a32a3
+# # cyan
+# palette = 6=#05989a
+# palette = 14=#34e2e2
+# # white
+# palette = 7=#d3d7cf
+# palette = 15=#ededec
+# 
+# background = ffffff
+# foreground = 000000
+# cursor-color = 000000
+# selection-background = 8d9091
+# selection-foreground = ffffff
 
-background = ffffff
-foreground = 000000
-cursor-color = 000000
-selection-background = 8d9091
-selection-foreground = ffffff
+theme = tokyonight_moon
