--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@ clone-in-kitty
 font_family         family='JetBrainsMonoNL Nerd Font Mono' style=SemiBold
 bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
 italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
-font_size 14
+font_size 15
 adjust_line_height 5
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
@@ -40,7 +40,7 @@ window_border_width 0.5pt
 
 
 # tab bar
-tab_bar_edge top
+tab_bar_edge down
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}"
@@ -69,10 +69,8 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-# map cmd+i previous_tab
-# map cmd+o next_tab
-map cmd+i send_text all \x06i
-map cmd+o send_text all \x06o
+map cmd+i previous_tab
+map cmd+o next_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -85,10 +83,10 @@ map cmd+l neighboring_window right
 map cmd+k neighboring_window up
 map cmd+j neighboring_window down
 map cmd+r layout_action rotate
-map cmd+shift+= resize_window wider 5
-map cmd+shift+- resize_window narrower 5
-map cmd+ctrl+= resize_window taller 5
-map cmd+ctrl+- resize_window shorter 5
+map cmd+shift+= resize_window wider 1
+map cmd+shift+- resize_window narrower 1
+map cmd+ctrl+= resize_window taller 1
+map cmd+ctrl+- resize_window shorter 1
 map cmd+m toggle_layout stack
 # search
 map cmd+f show_scrollback
