--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,9 +45,11 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
+# set-option -g status-style bg=#222436
 set-option -g status-style bg=#FFFFFF
 
-set-option -g window-status-style bg=default,fg=black,bold
+
+set-option -g window-status-style bg=default,fg=grey,bold
 set-option -g window-status-current-style bg=default,fg=green,bold
 
 set-option -g pane-active-border-style fg=colour250
@@ -58,6 +60,9 @@ set-option -g status-right ''
 
 set -g status-left-length 20
 set -g status-left " "
+
+set -g status-interval 3
+set -g status-right 'CPU: #(top -l 1 -n 0 | grep "CPU usage" | cut -d" " -f3)  '
 
 # --------------------------------------------------------
 # Key bindings:
