--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,8 +5,8 @@ clone-in-kitty
 font_family         family='JetBrainsMonoNL Nerd Font Mono' style=SemiBold
 bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
 italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
-font_size 15
-adjust_line_height 5
+font_size 14
+adjust_line_height 0
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
 cursor_shape block
@@ -19,8 +19,8 @@ mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
 
 # cursor trail
-cursor_trail 0
-cursor_trail_decay 0.0 0.3
+cursor_trail 1
+cursor_trail_decay 0.0 0.2
 cursor_trail_start_threshold 10
 
 
@@ -69,8 +69,10 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-map cmd+i previous_tab
-map cmd+o next_tab
+# map cmd+i previous_tab
+# map cmd+o next_tab
+map cmd+i send_text all \x06i
+map cmd+o send_text all \x06o
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
