nvim: update plugin

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,10 +2,10 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='JetBrainsMonoNL Nerd Font Mono' style=SemiBold
-bold_font           family='JetBrainsMonoNL Nerd Font Mono' style=Bold
+font_family         family='JetBrainsMono Nerd Font Mono' style=SemiBold
+bold_font           family='JetBrainsMono Nerd Font Mono' style=Bold
 italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
-font_size 15
+font_size 14
 adjust_line_height 5
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
@@ -40,17 +40,18 @@ window_border_width 0.5pt
 
 
 # tab bar
-tab_bar_edge down
+tab_bar_edge top
+tab_bar_align center
 tab_bar_style separator
 tab_separator ""
-tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}"
-active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
+tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}: {title.split()[0]}"
+active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}: {title.split()[0]}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 100
+tab_bar_min_tabs 1
 
 # advanced
-shell_integration no-cursor no-title
+shell_integration no-cursor
 
 enable_audio_bell no
 
@@ -69,10 +70,10 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-# map cmd+i previous_tab
-# map cmd+o next_tab
-map cmd+i send_text all \x06i
-map cmd+o send_text all \x06o
+map cmd+i previous_tab
+map cmd+o next_tab
+# map cmd+i send_text all \x06i
+# map cmd+o send_text all \x06o
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
