nvim: add telescope-project

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,11 +2,11 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='JetBrainsMono Nerd Font Mono' style=SemiBold
-bold_font           family='JetBrainsMono Nerd Font Mono' style=Bold
+font_family         family='JetBrainsMono Nerd Font Mono' style=Medium
+bold_font           family='JetBrainsMono Nerd Font Mono' style=SemiBold
 italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
 font_size 14
-adjust_line_height 5
+adjust_line_height 0
 adjust_column_width -3
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
 cursor_shape block
@@ -19,7 +19,7 @@ mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
 
 # cursor trail
-cursor_trail 1
+cursor_trail 0
 cursor_trail_decay 0.0 0.2
 cursor_trail_start_threshold 10
 
@@ -44,8 +44,8 @@ tab_bar_edge top
 tab_bar_align center
 tab_bar_style separator
 tab_separator ""
-tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}: {title.split()[0]}"
-active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}: {title.split()[0]}"
+tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}:{title.split()[0]}"
+active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}:{title.split()[0]}*"
 active_tab_font_style bold
 inactive_tab_font_style bold
 tab_bar_min_tabs 1
