--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,18 +2,20 @@ shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
 
 # font
-font_family         family='JetBrainsMono Nerd Font Mono' style=Medium
-bold_font           family='JetBrainsMono Nerd Font Mono' style=SemiBold
-italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
+font_family         family='Maple Mono NF CN' style=Regular
+bold_font           family='Maple Mono NF CN' style=SemiBold
+#italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
 font_size 14
-adjust_line_height 0
-adjust_column_width -3
+
+modify_font cell_width 90%
+modify_font cell_height 5px
+
 symbol_map U+00B7 Caskaydiacove Nerd Font Mono ExtraLight Italic
 cursor_shape block
 cursor_blink_interval 0
 
 
-# mouse
+# mousel
 copy_on_select true
 mouse_hide_wait 0
 paste_actions quote-urls-at-prompt
@@ -45,10 +47,11 @@ tab_bar_align center
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}:{title.split()[0]}"
-active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}:{title.split()[0]}*"
+active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}:{title.split()[0]}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
+tab_title_max_length 10
 
 # advanced
 shell_integration no-cursor
@@ -70,10 +73,10 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-map cmd+i previous_tab
-map cmd+o next_tab
-# map cmd+i send_text all \x06i
-# map cmd+o send_text all \x06o
+# map cmd+i previous_tab
+# map cmd+o next_tab
+map cmd+i send_text all \x06i
+map cmd+o send_text all \x06o
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -86,15 +89,17 @@ map cmd+l neighboring_window right
 map cmd+k neighboring_window up
 map cmd+j neighboring_window down
 map cmd+r layout_action rotate
-map cmd+shift+= resize_window wider 1
-map cmd+shift+- resize_window narrower 1
-map cmd+ctrl+= resize_window taller 1
-map cmd+ctrl+- resize_window shorter 1
+map cmd+shift+= resize_window wider 5
+map cmd+shift+- resize_window narrower 5
+map cmd+ctrl+= resize_window taller 5
+map cmd+ctrl+- resize_window shorter 5
 map cmd+m toggle_layout stack
 # search
-map cmd+f show_scrollback
+#map cmd+f show_scrollback
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+; kitten grab/grab.py
+
+map cmd+f send_text all \x06c
 
 # light theme
 background #ffffff
