--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,7 @@ set-option -g status-justify left
 
 set-option -g status-bg default
 set-option -g status-fg yellow
-# set-option -g status-style bg=#222436
+#set-option -g status-style bg=#222436
 set-option -g status-style bg=#FFFFFF
 
 
@@ -61,8 +61,8 @@ set-option -g status-right ''
 set -g status-left-length 20
 set -g status-left " "
 
-set -g status-interval 3
-set -g status-right 'CPU: #(top -l 1 -n 0 | grep "CPU usage" | cut -d" " -f3)  '
+#set -g status-interval 3
+#set -g status-right 'CPU: #(top -l 1 -n 0 | grep "CPU usage" | cut -d" " -f3)  '
 
 # --------------------------------------------------------
 # Key bindings:
