--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,8 +4,7 @@ clone-in-kitty
 # font
 font_family         family='Maple Mono NF CN' style=Regular
 bold_font           family='Maple Mono NF CN' style=SemiBold
-#italic_font         family='Caskaydiacove Nerd Font Mono' style=Regular
-font_size 14
+font_size 13
 
 modify_font cell_width 90%
 modify_font cell_height 5px
@@ -50,7 +49,7 @@ tab_title_template "{fmt.fg.black}{fmt.bg.white}  {index}:{title.split()[0]}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}:{title.split()[0]}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 tab_title_max_length 10
 
 # advanced
@@ -101,36 +100,66 @@ map cmd+; kitten grab/grab.py
 
 map cmd+f send_text all \x06c
 
-# light theme
 background #ffffff
 foreground #000000
 cursor #666666
-cursor_text_color #ffffff
-selection_background #8d9091
-selection_foreground #ffffff
-active_border_color #00ff15
-inactive_border_color #000000
+selection_background #e5e5e6
 # black
 color0 #000000
-color8 #545753
+color8 #000000
 # red
-color1 #cc0000
-color9 #ef2828
+color1 #de3d35
+color9 #de3d35
 # green
-color2 #227a00
-color10 #3dcc06
+color2 #3e953a
+color10 #3e953a
 # yellow
-color3 #e89f00
-color11 #d6d600
+color3 #d2b67b
+color11 #d2b67b
 # blue
-color4 #043abd
-color12 #157ae6
+color4 #2f5af3
+color12 #2f5af3
 # magenta
-color5 #8f008c
-color13 #5a32a3
+color5 #950095
+color13 #a00095
 # cyan
-color6 #05989a
-color14 #34e2e2
+color6 #3e953a
+color14 #3e953a
 # white
-color7 #d3d7cf
-color15 #ededec
+color7 #bbbbbb
+color15 #ffffff
+selection_foreground #2a2b33
+
+# light theme
+# background #ffffff
+# foreground #000000
+# cursor #666666
+# cursor_text_color #ffffff
+# selection_background #8d9091
+# selection_foreground #ffffff
+# active_border_color #00ff15
+# inactive_border_color #000000
+# black
+# color0 #000000
+# color8 #545753
+# red
+# color1 #cc0000
+# color9 #ef2828
+# green
+# color2 #227a00
+# color10 #3dcc06
+# yellow
+# color3 #e89f00
+# color11 #d6d600
+# blue
+# color4 #043abd
+# color12 #157ae6
+# magenta
+# color5 #8f008c
+# color13 #5a32a3
+# cyan
+# color6 #05989a
+# color14 #34e2e2
+# white
+# color7 #d3d7cf
+# color15 #ededec
