--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,7 +47,7 @@ set-option -g status-bg default
 set-option -g status-fg yellow
 #set-option -g status-style bg=#222436
 set-option -g status-style bg=#FFFFFF
-
+#set-option -g status-style bg=#282828
 
 set-option -g window-status-style bg=default,fg=grey,bold
 set-option -g window-status-current-style bg=default,fg=green,bold
