--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,8 @@ clone-in-kitty
 # font
 font_family         family='Maple Mono NF CN' style=Regular
 bold_font           family='Maple Mono NF CN' style=SemiBold
-font_size 13
+font_size 14
+dim_opacity 0.82
 
 modify_font cell_width 90%
 modify_font cell_height 5px
@@ -22,7 +23,7 @@ paste_actions quote-urls-at-prompt
 # cursor trail
 cursor_trail 0
 cursor_trail_decay 0.0 0.2
-cursor_trail_start_threshold 10
+cursor_trail_start_threshold 5
 
 
 # performance tuning
@@ -72,8 +73,8 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-# map cmd+i previous_tab
-# map cmd+o next_tab
+#map cmd+i previous_tab
+#map cmd+o next_tab
 map cmd+i send_text all \x06i
 map cmd+o send_text all \x06o
 # font size
@@ -94,11 +95,9 @@ map cmd+ctrl+= resize_window taller 5
 map cmd+ctrl+- resize_window shorter 5
 map cmd+m toggle_layout stack
 # search
-#map cmd+f show_scrollback
+map cmd+f show_scrollback
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+; kitten grab/grab.py
-
-map cmd+f send_text all \x06c
 
 background #ffffff
 foreground #000000
@@ -130,36 +129,4 @@ color7 #bbbbbb
 color15 #ffffff
 selection_foreground #2a2b33
 
-# light theme
-# background #ffffff
-# foreground #000000
-# cursor #666666
-# cursor_text_color #ffffff
-# selection_background #8d9091
-# selection_foreground #ffffff
-# active_border_color #00ff15
-# inactive_border_color #000000
-# black
-# color0 #000000
-# color8 #545753
-# red
-# color1 #cc0000
-# color9 #ef2828
-# green
-# color2 #227a00
-# color10 #3dcc06
-# yellow
-# color3 #e89f00
-# color11 #d6d600
-# blue
-# color4 #043abd
-# color12 #157ae6
-# magenta
-# color5 #8f008c
-# color13 #5a32a3
-# cyan
-# color6 #05989a
-# color14 #34e2e2
-# white
-# color7 #d3d7cf
-# color15 #ededec
+
